--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-*{
-    background-color: rgb(64, 85, 61);
+body {
+    background-color: rgb(82, 62, 39);
 }
 
-.container {
+.calulator-container {
     width: 500px;
     height: 500px;
     border: 1px solid black;
@@ -13,6 +13,7 @@
     border-radius: 8px;
     padding: 10px;
     background-color: rgb(109, 83, 51);
+    box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 
 }
 body {
@@ -23,16 +24,25 @@ body {
 .button {
     border: 1px solid black;
     border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
-.display {
+.screen {
     grid-column: 1/5;
     border: 1px solid black;
-    height: 130px;
     border-radius: 15px;
     background-color: rgb(27, 21, 12);
-
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+    height: 120px;
 }
+.previous-operand,
+.current {
+    font-size: 42px;
+    color: azure;
+}
+
 .equal {
     grid-column: 3/5;
 }
